--- a/public/pages/signup.html
+++ b/public/pages/signup.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/auth.css">
     <link rel="stylesheet" href="../assets/css/language-switcher.css">
+    <link rel="stylesheet" href="../assets/css/mobile-responsive.css">
 </head>
 <body>
     <div class="auth-container">
