feat: Add Messages and Requests links to all navigation menus

--- a/public/pages/browse.html
+++ b/public/pages/browse.html
@@ -578,6 +578,8 @@
           mainNavMenu.innerHTML = `
             <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> <span data-i18n="nav.dashboard">Dashboard</span></a>
             <a href="browse.html" style="border-bottom:2px solid #7ef9ff"><i class="fas fa-search"></i> <span data-i18n="nav.browse">Browse Items</span></a>
+            <a href="messages.html"><i class="fas fa-comments"></i> <span data-i18n="nav.messages">Messages</span></a>
+            <a href="requests.html"><i class="fas fa-exchange-alt"></i> <span data-i18n="nav.requests">Requests</span></a>
             <a href="add-listing.html"><i class="fas fa-plus-circle"></i> <span data-i18n="nav.addListing">Add Listing</span></a>
           `;
           // Apply translations after updating the menu
