--- a/public/pages/cart.html
+++ b/public/pages/cart.html
@@ -494,6 +494,8 @@
       <ul class="nav-links" id="mainNavMenu">
         <!-- Dynamic menu items will be inserted here based on auth state -->
         <li><a href="browse.html"><i class="fas fa-search"></i> <span data-i18n="nav.browse">Browse</span></a></li>
+        <li><a href="messages.html"><i class="fas fa-comments"></i> <span data-i18n="nav.messages">Messages</span></a></li>
+        <li><a href="requests.html"><i class="fas fa-exchange-alt"></i> <span data-i18n="nav.requests">Requests</span></a></li>
         <li><a href="add-listing.html"><i class="fas fa-plus-circle"></i> <span data-i18n="nav.addListing">Add Listing</span></a></li>
         <li><a href="wishlist.html"><i class="fas fa-heart"></i> <span data-i18n="nav.wishlist">Wishlist</span></a></li>
         <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> <span data-i18n="nav.dashboard">Dashboard</span></a></li>
