Integrate real-time notifications across all pages - Add notification bell to navigation in 8 authenticated pages - Include real-time-notifications.css and .js in all pages - Enable instant alerts for messages, transactions, requests - Complete UI integration of real-time notification system

--- a/public/pages/browse.html
+++ b/public/pages/browse.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="../assets/css/styles.css" />
   <link rel="stylesheet" href="../assets/css/language-switcher.css">
   <link rel="stylesheet" href="../assets/css/mobile-responsive.css">
+  <link rel="stylesheet" href="../assets/css/real-time-notifications.css">
   <script src="../assets/js/auth-client.js"></script>
 </head>
 <body>
