--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../assets/css/styles.css" />
   <link rel="stylesheet" href="../assets/css/language-switcher.css">
+  <link rel="stylesheet" href="../assets/css/real-time-notifications.css">
   <script src="../assets/js/auth-client.js"></script>
   <style>
     .profile-container {
@@ -290,5 +291,6 @@
   <script src="../assets/js/translation.js"></script>
   <script src="../assets/js/language-switcher.js"></script>
   <script src="../assets/js/profile.js"></script>
+  <script src="../assets/js/real-time-notifications.js"></script>
 </body>
 </html>
