Fix URLs in testing guide - use absolute paths

--- a/public/testing-guide.html
+++ b/public/testing-guide.html
@@ -169,7 +169,7 @@
             <div class="step">
                 <h3>Step 1: Seed Demo Data</h3>
                 <p>First, populate your database with realistic demo data:</p>
-                <a href="seed-demo-data.php" class="btn">
+                <a href="/seed-demo-data.php" class="btn">
                     <i class="fas fa-database"></i> Run Database Seeder
                 </a>
                 <p style="color: #9aa5c3; margin-top: 15px;">
@@ -180,7 +180,7 @@
             <div class="step">
                 <h3>Step 2: Test Notifications</h3>
                 <p>Verify Railway database connection and create test notifications:</p>
-                <a href="test-notifications.php" class="btn btn-secondary">
+                <a href="/test-notifications.php" class="btn btn-secondary">
                     <i class="fas fa-bell"></i> Test Notifications
                 </a>
                 <p style="color: #9aa5c3; margin-top: 15px;">
@@ -191,10 +191,10 @@
             <div class="step">
                 <h3>Step 3: Login & Explore</h3>
                 <p>Login with any user account and explore the platform:</p>
-                <a href="pages/login.html" class="btn">
+                <a href="/pages/login.html" class="btn">
                     <i class="fas fa-sign-in-alt"></i> Go to Login
                 </a>
-                <a href="pages/dashboard.html" class="btn">
+                <a href="/pages/dashboard.html" class="btn">
                     <i class="fas fa-tachometer-alt"></i> Go to Dashboard
                 </a>
             </div>
@@ -382,25 +382,25 @@
         <div class="card">
             <h2><i class="fas fa-link"></i> Quick Navigation</h2>
             <div style="display: flex; flex-wrap: wrap; gap: 10px;">
-                <a href="seed-demo-data.php" class="btn">
+                <a href="/seed-demo-data.php" class="btn">
                     <i class="fas fa-database"></i> Seed Database
                 </a>
-                <a href="test-notifications.php" class="btn">
+                <a href="/test-notifications.php" class="btn">
                     <i class="fas fa-vial"></i> Test Notifications
                 </a>
-                <a href="pages/dashboard.html" class="btn">
+                <a href="/pages/dashboard.html" class="btn">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
                 </a>
-                <a href="pages/messages.html" class="btn">
+                <a href="/pages/messages.html" class="btn">
                     <i class="fas fa-comments"></i> Messages
                 </a>
-                <a href="pages/requests.html" class="btn">
+                <a href="/pages/requests.html" class="btn">
                     <i class="fas fa-exchange-alt"></i> Requests
                 </a>
-                <a href="pages/browse.html" class="btn">
+                <a href="/pages/browse.html" class="btn">
                     <i class="fas fa-search"></i> Browse
                 </a>
-                <a href="../docs/IMPLEMENTATION_SUMMARY.md" class="btn btn-secondary">
+                <a href="/docs/IMPLEMENTATION_SUMMARY.md" class="btn btn-secondary">
                     <i class="fas fa-book"></i> Documentation
                 </a>
             </div>
