--- a/public/pages/browse.html
+++ b/public/pages/browse.html
@@ -617,6 +617,8 @@
   </script>
   <script src="../assets/js/translation.js"></script>
   <script src="../assets/js/language-switcher.js"></script>
+  <script src="../assets/js/real-time-notifications.js"></script>
+  <script src="../assets/js/nav-auth-topnav.js"></script>
 </body>
 </html>
 
