new updates on our website

--- a/public/pages/requests.html
+++ b/public/pages/requests.html
@@ -255,6 +255,8 @@
     <script src="../assets/js/translation.js"></script>
     <script src="../assets/js/language-switcher.js"></script>
     <script src="../assets/js/nav-auth-topnav.js"></script>
+    <script src="../assets/js/online-status.js"></script>
+    <script src="../assets/js/realtime-manager.js"></script>
     <script src="../assets/js/real-time-notifications.js"></script>
     <script src="../assets/js/request-manager.js"></script>
     <script>
