--- a/public/pages/browse.html
+++ b/public/pages/browse.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="../assets/css/language-switcher.css">
   <link rel="stylesheet" href="../assets/css/mobile-responsive.css">
   <link rel="stylesheet" href="../assets/css/real-time-notifications.css">
+  <link rel="stylesheet" href="../assets/css/item-modal.css">
   <script src="../assets/js/auth-client.js"></script>
 </head>
 <body>
@@ -541,6 +542,9 @@
   <script src="../assets/js/language-switcher.js"></script>
   <script src="../assets/js/script.js"></script>
   <script src="../assets/js/cript.js"></script>
+  <script src="../assets/js/online-status.js"></script>
+  <script src="../assets/js/realtime-manager.js"></script>
+  <script src="../assets/js/item-details.js"></script>
   <script src="../assets/js/browse.js"></script>
   <script src="../assets/js/cart.js"></script>
   <script>
