--- a/public/pages/browse.html
+++ b/public/pages/browse.html
@@ -136,125 +136,11 @@
       </div>
 
       <div class="cards cards--4" id="itemsGrid">
-        <!-- Items with data attributes for filtering -->
-        <article class="card" data-category="electronics" data-price="50" data-location="Ashesi" data-title="Classroom Projector">
-          <img class="card__thumb" src="../assets/images/projector ashesi.jpg" alt="Projector">
-          <h3>Classroom Projector</h3>
-          <p>HD projector for lectures and presentations at Ashesi.</p>
-          <div class="card__meta">GHS 50/day — Ashesi University, Berekuso</div>
-        </article>
-
-        <article class="card" data-category="transport" data-price="15" data-location="Ashesi" data-title="Campus Bicycle">
-          <img class="card__thumb" src="../assets/images/bicycle.jpeg" alt="Bicycle">
-          <h3>Campus Bicycle</h3>
-          <p>Lightweight bike for moving around Ashesi campus.</p>
-          <div class="card__meta">GHS 15/day — Ashesi University</div>
-        </article>
-
-        <article class="card" data-category="books" data-price="0" data-location="Ashesi" data-title="Textbooks Collection">
-          <img class="card__thumb" src="../assets/images/ashesi textbook.jpg" alt="Textbooks">
-          <h3>Course Textbooks Collection</h3>
-          <p>Programming and engineering textbooks available for short-term borrowing.</p>
-          <div class="card__meta">Free — Ashesi University Library</div>
-        </article>
-
-        <article class="card" data-category="clothing" data-price="80" data-location="Accra" data-title="Kente Cloth Set">
-          <img class="card__thumb" src="../assets/images/kente cloth.jpg" alt="Kente Cloth">
-          <h3>Kente Cloth Set</h3>
-          <p>Traditional Kente cloth set from Accra artisans.</p>
-          <div class="card__meta">GHS 80/day — Accra</div>
-        </article>
-
-        <article class="card" data-category="music" data-price="60" data-location="Kumasi" data-title="Drum Set">
-          <img class="card__thumb" src="../assets/images/drum set.jpg" alt="Drum Set">
-          <h3>Traditional Drum Set</h3>
-          <p>High-quality drum set for performances.</p>
-          <div class="card__meta">GHS 60/day — Kumasi</div>
-        </article>
-
-        <article class="card" data-category="electronics" data-price="20" data-location="Accra" data-title="Portable Speaker">
-          <img class="card__thumb" src="../assets/images/portable speaker.jpg" alt="Speaker">
-          <h3>Portable Bluetooth Speaker</h3>
-          <p>Compact speaker perfect for events and gatherings.</p>
-          <div class="card__meta">GHS 20/day — Accra</div>
-        </article>
-
-        <article class="card" data-category="home" data-price="35" data-location="Accra" data-title="Blender">
-          <img class="card__thumb" src="../assets/images/blender.jpeg" alt="Blender">
-          <h3>Kitchen Blender</h3>
-          <p>High-speed blender for smoothies and meals.</p>
-          <div class="card__meta">GHS 35/day — Accra</div>
-        </article>
-
-        <article class="card" data-category="electronics" data-price="25" data-location="Tamale" data-title="Camera">
-          <img class="card__thumb" src="../assets/images/camera.jpg" alt="Camera">
-          <h3>Digital Camera</h3>
-          <p>DSLR for photography projects and events.</p>
-          <div class="card__meta">GHS 25/day — Tamale</div>
-        </article>
-
-        <article class="card" data-category="home" data-price="40" data-location="Ashesi" data-title="Camping Tent">
-          <img class="card__thumb" src="../assets/images/camping tent.jpg" alt="Tent">
-          <h3>Camping Tent</h3>
-          <p>4-person tent suitable for outings around Berekuso.</p>
-          <div class="card__meta">GHS 40/day — Ashesi/Berekuso</div>
-        </article>
-
-        <article class="card" data-category="electronics" data-price="10" data-location="Accra" data-title="Powerbank">
-          <img class="card__thumb" src="../assets/images/power bank.png" alt="Powerbank">
-          <h3>Powerbank 20,000mAh</h3>
-          <p>Portable charger for phones and small devices.</p>
-          <div class="card__meta">GHS 10/day — Accra</div>
-        </article>
-
-        <article class="card" data-category="electronics" data-price="45" data-location="Ashesi" data-title="Camera+Lens">
-          <img class="card__thumb" src="../assets/images/camera lens.jpeg" alt="Lens">
-          <h3>Camera + Lens Kit</h3>
-          <p>Camera kit suitable for student film projects.</p>
-          <div class="card__meta">GHS 45/day — Ashesi</div>
-        </article>
-
-        <article class="card" data-category="home" data-price="12" data-location="Accra" data-title="Projector+Adapter">
-          <img class="card__thumb" src="../assets/images/adapter.jpg" alt="Adapter">
-          <h3>HDMI Adapter / Cables</h3>
-          <p>Adapters and cables for projectors and laptops.</p>
-          <div class="card__meta">GHS 12/day — Accra</div>
-        </article>
-        <!-- Additional items to ensure categories exist across locations -->
-        <article class="card" data-category="transport" data-price="20" data-location="Accra" data-title="City Bicycle">
-          <img class="card__thumb" src="../assets/images/city bicycle.jpeg" alt="City Bicycle">
-          <h3>City Bicycle</h3>
-          <p>Comfortable city bicycle for short trips around Accra.</p>
-          <div class="card__meta">GHS 20/day — Accra</div>
-        </article>
-
-        <article class="card" data-category="books" data-price="0" data-location="Accra" data-title="Reference+Texts">
-          <img class="card__thumb" src="../assets/images/reference texts.jpg" alt="Reference Texts">
-          <h3>Reference Texts</h3>
-          <p>Collection of university reference books available in Accra.</p>
-          <div class="card__meta">Free — Accra</div>
-        </article>
-
-        <article class="card" data-category="clothing" data-price="25" data-location="Ashesi" data-title="Graduation+Gown">
-          <img class="card__thumb" src="../assets/images/graduation gown.png" alt="Gown">
-          <h3>Graduation Gown</h3>
-          <p>Academic gown available for ceremonies at Ashesi.</p>
-          <div class="card__meta">GHS 25/day — Ashesi University</div>
-        </article>
-
-        <article class="card" data-category="music" data-price="30" data-location="Ashesi" data-title="Portable+Keyboard">
-          <img class="card__thumb" src="../assets/images/portable keyboard.jpeg" alt="Keyboard">
-          <h3>Portable Keyboard</h3>
-          <p>61-key portable keyboard, ideal for rehearsals and lessons on campus.</p>
-          <div class="card__meta">GHS 30/day — Ashesi</div>
-        </article>
-
-        <article class="card" data-category="music" data-price="35" data-location="Accra" data-title="Djembe+Drum">
-          <img class="card__thumb" src="../assets/images/djembe drum.jpg" alt="Djembe Drum">
-          <h3>Djembe Drum</h3>
-          <p>Traditional djembe drum for percussion sessions and events.</p>
-          <div class="card__meta">GHS 35/day — Accra</div>
-        </article>
+        <!-- Items will be loaded dynamically from the database -->
+        <div style="grid-column: 1 / -1; text-align: center; padding: 40px; color: #9aa5c3;">
+          <i class="fas fa-spinner fa-spin" style="font-size: 2rem; margin-bottom: 16px;"></i>
+          <p>Loading items from database...</p>
+        </div>
       </div>
     </div>
   </main>
